# marble_plugin

./: .gitignore  mainpage.dox  manifest.xml  plugin.xml
src/: CMakeLists.txt
src/marble_plugin/: CMakeLists.txt  marble_plugin.cpp  marble_plugin.h  marble_plugin.ui
